<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/playersInfosLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|right"
    android:layout_marginTop="3dp"
    android:gravity="center_vertical|left"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Player 1"
            android:textColor="#3F3F3F" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:background="#3F3F3F" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/blasonInfosView"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/arryn" />

        <LinearLayout
            android:id="@+id/playersInfosList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextturnreinforcements"
                android:textColor="#3F3F3F" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ownedcities"
                android:textColor="#3F3F3F" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ownedkingdoms"
                android:textColor="#3F3F3F" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totaltroops"
                android:textColor="#3F3F3F" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>