<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/optionpanel"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:weightSum="100" >

    <LinearLayout
        android:id="@+id/blanklayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="26" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="59"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/playersStatsSpinner"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:paddingTop="2dp" />

            <TableLayout
                android:id="@+id/statisticsTable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="0dp"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cell_shape"
                        android:padding="5dp"
                        android:text="@string/playerscount"
                        android:textColor="#3F3F3F" >
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cell_shape"
                        android:padding="5dp"
                        android:text="@string/victories"
                        android:textColor="#3F3F3F" >
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cell_shape"
                        android:padding="5dp"
                        android:text="@string/defeats"
                        android:textColor="#3F3F3F" >
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cell_shape"
                        android:padding="5dp"
                        android:text="@string/total"
                        android:textColor="#3F3F3F" >
                    </TextView>
                </TableRow>

                <include layout="@layout/statsrow" />

                <include layout="@layout/statsrow" />

                <include layout="@layout/statsrow" />

                <include layout="@layout/statsrow" />

                <include layout="@layout/statsrow" />

                <include layout="@layout/statsrow" />

                <include layout="@layout/statsrow" />
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>